WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171626
getUserMedia() fails because devices list is empty / inactive
https://bugs.webkit.org/show_bug.cgi?id=171626
Summary
getUserMedia() fails because devices list is empty / inactive
Jer Noble
Reported
2017-05-03 15:34:26 PDT
getUserMedia() fails because devices list is empty / inactive
Attachments
Patch
(3.25 KB, patch)
2017-05-03 15:37 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-05-03 15:37:56 PDT
Created
attachment 308973
[details]
Patch
Jer Noble
Comment 2
2017-05-03 15:38:32 PDT
rdar://problem/31848580
WebKit Commit Bot
Comment 3
2017-05-03 16:48:39 PDT
Comment on
attachment 308973
[details]
Patch Clearing flags on attachment: 308973 Committed
r216155
: <
http://trac.webkit.org/changeset/216155
>
WebKit Commit Bot
Comment 4
2017-05-03 16:48:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug